--- a/ray-rllib/05-Custom-Environments-Reward-Shaping.ipynb
+++ b/ray-rllib/05-Custom-Environments-Reward-Shaping.ipynb
@@ -63,33 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-05-05 08:33:11,667\tINFO resource_spec.py:212 -- Starting Ray with 4.25 GiB memory available for workers and up to 2.13 GiB for objects. You can adjust these settings with ray.init(memory=<bytes>, object_store_memory=<bytes>).\n",
-      "2020-05-05 08:33:12,001\tINFO services.py:1148 -- View the Ray dashboard at \u001b[1m\u001b[32mlocalhost:8267\u001b[39m\u001b[22m\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'node_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:37100',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-05-05_08-33-11_657093_49830/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-05-05_08-33-11_657093_49830/sockets/raylet',\n",
-       " 'webui_url': 'localhost:8267',\n",
-       " 'session_dir': '/tmp/ray/session_2020-05-05_08-33-11_657093_49830'}"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'Dashboard URL: http://{ray.get_webui_url()}')"
    ]
@@ -98,155 +74,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Different Spaces"
+    "## Different Spaces"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first thing to do when formulating an RL problem is to specify the dimensions of your observation space and action space. Abstractions for these are provided in ``gym``. "
+    "The first thing to do when formulating an RL problem is to specify the dimensions of your observation space and action space. Abstractions for these are provided in Gym. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Exercise 1:** Match different actions to their corresponding space.\n",
+    "### Matching Different Actions to Their Corresponding Space\n",
     "\n",
-    "The purpose of this exercise is to familiarize you with different Gym spaces. For example:\n",
+    "Let's familiarize ourselves with different Gym spaces. For example:\n",
     "\n",
     "    discrete = spaces.Discrete(10)\n",
     "    print(\"Random sample of this space: \", [discrete.sample() for i in range(4)])\n",
     "\n",
-    "Use `help(spaces)` or `help([specific space])` (i.e., `help(spaces.Discrete)`) for more info."
+    "Use `help(gym.spaces)` or `help([specific space])` (i.e., `help(gym.spaces.Discrete)`) for more info."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class Discrete in module gym.spaces.discrete:\n",
-      "\n",
-      "class Discrete(gym.spaces.space.Space)\n",
-      " |  Discrete(n)\n",
-      " |  \n",
-      " |  A discrete space in :math:`\\{ 0, 1, \\\\dots, n-1 \\}`. \n",
-      " |  \n",
-      " |  Example::\n",
-      " |  \n",
-      " |      >>> Discrete(2)\n",
-      " |  \n",
-      " |  Method resolution order:\n",
-      " |      Discrete\n",
-      " |      gym.spaces.space.Space\n",
-      " |      builtins.object\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __eq__(self, other)\n",
-      " |      Return self==value.\n",
-      " |  \n",
-      " |  __init__(self, n)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  __repr__(self)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  contains(self, x)\n",
-      " |      Return boolean specifying if x is a valid\n",
-      " |      member of this space\n",
-      " |  \n",
-      " |  sample(self)\n",
-      " |      Randomly sample an element of this space. Can be \n",
-      " |      uniform or non-uniform sampling based on boundedness of space.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes defined here:\n",
-      " |  \n",
-      " |  __hash__ = None\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from gym.spaces.space.Space:\n",
-      " |  \n",
-      " |  __contains__(self, x)\n",
-      " |  \n",
-      " |  from_jsonable(self, sample_n)\n",
-      " |      Convert a JSONable data type to a batch of samples from this space.\n",
-      " |  \n",
-      " |  seed(self, seed=None)\n",
-      " |      Seed the PRNG of this space.\n",
-      " |  \n",
-      " |  to_jsonable(self, sample_n)\n",
-      " |      Convert a batch of samples from this space to a JSONable data type.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors inherited from gym.spaces.space.Space:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "help(spaces.Discrete)"
+    "help(gym.spaces)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(gym.spaces.Discrete)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fix `action_space_jumble` kens to be correct for the corresponding `action_space_map`."
+    "Note the following example values in `action_space_examples` that the correspond to the declares spaces in `action_space_map`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Success!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from gym import spaces\n",
+    "\n",
     "action_space_map = {\n",
     "    \"discrete_10\": spaces.Discrete(10),\n",
-    "    \"box_1\": spaces.Box(0, 1, shape=(1,)),\n",
-    "    \"box_3x1\": spaces.Box(-2, 2, shape=(3, 1)),\n",
+    "    \"box_1\": spaces.Box(0, 1, shape=(1,), dtype=np.float64),  # the dtype can be omitted.\n",
+    "    \"box_3x1\": spaces.Box(-2, 2, shape=(3, 1), dtype=np.float64),\n",
     "    \"multi_discrete\": spaces.MultiDiscrete([ 5, 2, 2, 4 ])\n",
     "}\n",
     "\n",
-    "action_space_jumble = {\n",
+    "action_space_examples = {\n",
     "    \"discrete_10\": 1,\n",
-    "    \"multi_discrete\": np.array([0, 0, 0, 2]),\n",
-    "    \"box_3x1\": np.array([[-1.2657754], [-1.6528835], [ 0.5982418]]),\n",
     "    \"box_1\": np.array([0.89089584]),\n",
+    "    \"box_3x1\": np.array([[-1.2657754], [-1.6528835], [ 0.5982418]]),\n",
+    "    \"multi_discrete\": np.array([0, 0, 0, 2]),\n",
     "}\n",
     "\n",
-    "\n",
-    "for space_id, state in action_space_jumble.items():\n",
-    "    assert action_space_map[space_id].contains(state), (\n",
-    "        \"Looks like {} to {} is matched incorrectly.\".format(space_id, state))\n",
-    "    \n",
-    "print(\"Success!\")"
+    "for space_id, state in action_space_examples.items():\n",
+    "    assert action_space_map[space_id].contains(state), (f'Looks like {space_id} to {state} is matched incorrectly.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a space with 10 discrete values, 0 through 9, from which we sample and then update a counts map."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,84 +174,87 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([3, 0, 0, 1]),\n",
-       " array([4, 0, 0, 3]),\n",
-       " array([0, 1, 1, 0]),\n",
-       " array([2, 1, 0, 1]),\n",
-       " array([0, 0, 0, 0]),\n",
-       " array([2, 1, 1, 2]),\n",
-       " array([0, 0, 0, 3]),\n",
-       " array([2, 1, 0, 2]),\n",
-       " array([2, 0, 1, 0]),\n",
-       " array([1, 1, 1, 3]),\n",
-       " array([2, 0, 0, 3]),\n",
-       " array([2, 0, 0, 1]),\n",
-       " array([4, 0, 0, 2]),\n",
-       " array([2, 1, 1, 1]),\n",
-       " array([3, 1, 0, 0]),\n",
-       " array([3, 0, 1, 3]),\n",
-       " array([1, 0, 1, 0]),\n",
-       " array([1, 1, 0, 2]),\n",
-       " array([2, 1, 1, 1]),\n",
-       " array([2, 0, 0, 1])]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "[spaces.MultiDiscrete([ 5, 2, 2, 4 ]).sample() for _ in range(20)]"
+    "You can have more than one dimension of discrete (or continuous) values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md = spaces.MultiDiscrete([ 5, 2, 2, 4 ])\n",
+    "[md.sample() for _ in range(20)]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Exercise 2**: Setting up a custom environment with rewards\n",
+    "Note that the values for each dimension in the discrete space are inclusive, but zero-offset. For example, in the samples shown, the first integer returned in the array is 0-4, inclusive."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "box = spaces.Box(-2, 2, shape=(3,2), dtype=np.float64)\n",
+    "[box.sample() for _ in range(20)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 1: A Custom Environment with Rewards\n",
     "\n",
-    "We'll setup an `n-Chain` environment, which presents moves along a linear chain of states, with two actions:\n",
+    "Now we'll create an `n-Chain` environment, which represents moves along a linear chain of states, with two actions:\n",
     "\n",
-    "     (0) forward, which moves along the chain but returns no reward\n",
-    "     (1) backward, which returns to the beginning and has a small reward\n",
+    "     (0) **forward**: move along the chain but returns no reward\n",
+    "     (1) **backward**: returns to the beginning and has a small reward\n",
     "\n",
-    "The end of the chain, however, presents a large reward, and by moving 'forward', at the end of the chain this large reward can be repeated.\n",
+    "The end of the chain, however, provides a large reward, and by moving **forward** at the end of the chain, this large reward can be repeated.\n",
     "\n",
-    "#### Step 1: Implement ``ChainEnv._setup_spaces``\n",
+    "#### Step 1: Implement `ChainEnv._setup_spaces`\n",
     "\n",
-    "We'll use a `spaces.Discrete` action space and observation space. Implement `ChainEnv._setup_spaces` so that `self.action_space` and `self.obseration_space` are proper gym spaces.\n",
+    "Use a `spaces.Discrete` action space and observation space. Implement `ChainEnv._setup_spaces` in `ChainEnv` so that `self.action_space` and `self.obseration_space` are proper gym spaces.\n",
     "  \n",
-    "1. Observation space is an integer in ``[0 to n-1]``.\n",
-    "2. Action space is an integer in ``[0, 1]``.\n",
+    "1. The observation space is an integer in the range `[0 to n-1]`.\n",
+    "2. The action space is an integer in `[0, 1]`.\n",
     "\n",
     "For example:\n",
     "\n",
     "```python\n",
-    "    self.action_space = spaces.Discrete(2)\n",
-    "    self.observation_space = ...\n",
+    "self.action_space = spaces.Discrete(2)\n",
+    "self.observation_space = ...\n",
     "```\n",
     "\n",
     "You should see a message indicating tests passing when done correctly!\n",
     "\n",
     "#### Step 2: Implement a reward function.\n",
     "\n",
-    "When `env.step` is called, it returns a tuple of ``(state, reward, done, info)``. Right now, the reward is always 0. \n",
+    "When `env.step` is called, it returns a tuple of `(state, reward, done, info)`. Right now, the reward is always 0. Modify `step()` so that the following rewards are returned for the given actions: \n",
     "\n",
-    "Implement it so that \n",
-    "\n",
-    "1. ``action == 1`` will return `self.small_reward`.\n",
-    "2. ``action == 0`` will return 0 if `self.state < self.n - 1`.\n",
-    "3. ``action == 0`` will return `self.large_reward` if `self.state == self.n - 1`.\n",
+    "1. `action == 1` will return `self.small_reward`.\n",
+    "2. `action == 0` will return 0 if `self.state < self.n - 1`.\n",
+    "3. `action == 0` will return `self.large_reward` if `self.state == self.n - 1`.\n",
     "\n",
     "You should see a message indicating tests passing when done correctly. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from test_exercises import test_chain_env_spaces, test_chain_env_reward, test_chain_env_behavior\n",
+    "from gym import spaces"
    ]
   },
   {
@@ -393,17 +310,28 @@
     "        return self.state\n",
     "    \n",
     "# Tests here:\n",
-    "test_exercises.test_chain_env_spaces(ChainEnv)\n",
-    "test_exercises.test_chain_env_reward(ChainEnv)"
+    "test_chain_env_spaces(ChainEnv)\n",
+    "test_chain_env_reward(ChainEnv)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's now train a policy on the environment and evaluate this policy on our environment.\n",
+    "### Train a Policy on the Environment \n",
     "\n",
-    "You'll see that despite an extremely high reward, the policy has barely explored the state space."
+    "Now we'll train a policy on the environment and evaluate the policy. You'll see that despite an extremely high reward, the policy has barely explored the state space. \n",
+    "\n",
+    "In order to proceed, we'll import an implementation of the previous exercise, but you should actually comment-out the next cell once you complete the previous exercise!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from chain_env import ChainEnv"
    ]
   },
   {
@@ -427,7 +355,7 @@
    "source": [
     "trainer = PPOTrainer(trainer_config, ChainEnv);\n",
     "for i in range(20):\n",
-    "    print(\"Training iteration {}...\".format(i))\n",
+    "    print(f'Training iteration {i:3d}...')\n",
     "    trainer.train()"
    ]
   },
@@ -450,21 +378,30 @@
     "    max_state = max(max_state, state)\n",
     "    cumulative_reward += reward\n",
     "\n",
-    "print(\"Cumulative reward you've received is: {}. Congratulations!\".format(cumulative_reward))\n",
-    "print(\"Max state you've visited is: {}. This is out of {} states.\".format(max_state, env.n))"
+    "print(f'Cumulative reward you've received is: {cumulative_reward}. Congratulations!')\n",
+    "print(f'Max state you visited is: {max_state}. This is out of {env.n} states.')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3: Shaping the reward to encourage proper behavior.\n",
+    "We only visited a small number of states, maybe only 1 (max == 0?)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Shaping the Reward to Encourage Desired Behavior\n",
     "\n",
-    "You'll see that despite an extremely high reward, the policy has barely explored the state space. This is often the situation - where the reward designed to encourage a particular solution is suboptimal, and the behavior created is unintended.\n",
+    "We see that despite an extremely high reward, the policy has barely explored the state space. This is often the situation - where the reward designed to encourage a particular solution is suboptimal, and the behavior created is unintended.\n",
     "\n",
-    "#### Modify `ShapedChainEnv.step` to provide a reward that encourages the policy to traverse the chain (not just stick to 0). Do not change the behavior of the environment (the action -> state behavior should be the same).\n",
+    "### Exercise 2: Improve the Policy\n",
     "\n",
-    "You can change the reward to be whatever you wish."
+    "Modify `ShapedChainEnv.step()` in the next cell to provide a reward that encourages the policy to traverse the chain (not just stick to 0). Do not change the behavior of the environment (the action -> state behavior should be the same).\n",
+    "\n",
+    "You can change the reward to be whatever you wish. We'll text it in the next section."
    ]
   },
   {
@@ -488,14 +425,14 @@
     "        done = self._counter >= self._horizon\n",
     "        return self.state, reward, done, {}\n",
     "    \n",
-    "test_exercises.test_chain_env_behavior(ShapedChainEnv)"
+    "test_chain_env_behavior(ShapedChainEnv)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate `ShapedChainEnv` by running the cell below.\n",
+    "### Evaluate `ShapedChainEnv` by Running the Cell(s) Below\n",
     "\n",
     "This trains PPO on the new env and counts the number of states seen."
    ]
@@ -527,17 +464,11 @@
     "        cumulative_reward += reward\n",
     "    max_states += [max_state]\n",
     "\n",
-    "print(\"Cumulative reward you've received is: {}!\".format(cumulative_reward))\n",
-    "print(\"Max state you've visited is: {}. This is out of {} states.\".format(np.mean(max_states), env.n))\n",
+    "print(f'Cumulative reward you received is: {cumulative_reward}!')\n",
+    "print(f'Max states: {max_states}')\n",
+    "print(f'Max state you visited is: {max_state}. This is out of {env.n} states.')\n",
     "assert (env.n - np.mean(max_states)) / env.n < 0.2, \"This policy did not traverse many states.\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
