--- a/ray-rllib/07-RL-References.ipynb
+++ b/ray-rllib/07-RL-References.ipynb
@@ -74,7 +74,18 @@
     "#### PPO and TRPO\n",
     "* John Schulman, Filip Wolski, Prafulla Dhariwal, Alec Radford, Oleg Klimov, \"Proximal Policy Optimization Algorithms\", July 2017, [arxiv](https://arxiv.org/abs/1707.06347). The paper that introduced PPO (Proximal Policy Optimization).  It is a variant of _Trust Region Policy Optimization_ (TRPO) described in the next paper.\n",
     "* John Schulman, Sergey Levine, Philipp Moritz, Michael I. Jordan, Pieter Abbeel, \"Trust Region Policy Optimization\", February 2015, [arxiv](https://arxiv.org/abs/1502.05477). \n",
-    "* OpenAI, \"Proximal Policy Optimization\", [blog post](https://openai.com/blog/openai-baselines-ppo/). An accessible introduction to PPO."
+    "* OpenAI, \"Proximal Policy Optimization\", [blog post](https://openai.com/blog/openai-baselines-ppo/). An accessible introduction to PPO.\n",
+    "\n",
+    "#### DQN and Variants\n",
+    "\n",
+    "* Volodymyr Mnih, Koray Kavukcuoglu, David Silver, et. al, \"Playing Atari with Deep Reinforcement Learning\", December 2013, [arxiv](https://arxiv.org/abs/1312.5602) (original paper describing DQN).\n",
+    "* Volodymyr Mnih, Koray Kavukcuoglu, David Silver, et al. \"Human-level control through deep reinforcement learning\", Nature 518, 529–533 (2015). [Nature](https://doi.org/10.1038/nature14236).\n",
+    "* Dan Horgan, John Quan, David Budden, et al., \"Distributed Prioritized Experience Replay\", March 2018, [arxiv](https://arxiv.org/abs/1803.00933).\n",
+    "* Matteo Hessel, Joseph Modayil, Hado van Hasselt, et al., \"Rainbow: Combining Improvements in Deep Reinforcement Learning, October 2017, [arxiv](https://arxiv.org/abs/1710.02298).\n",
+    "* Dan Horgan, John Quan, David Budden, et al., \"Distributed Prioritized Experience Replay\", March 2018, [arxiv](https://arxiv.org/abs/1803.00933).\n",
+    "* Hado van Hasselt, Arthur Guez, and David Silver, \"Deep Reinforcement Learning with Double Q-learning\", December 2015, [arxiv](https://arxiv.org/abs/1509.06461).\n",
+    "* Tom Schaul, John Quan, Ioannis Antonoglou, and David Silver, \"Prioritized Experience Replay\", November 2015, [arxiv](https://arxiv.org/abs/1511.05952).\n",
+    "* Ziyu Wang, Tom Schaul, Matteo Hessel, et al., \"Dueling Network Architectures for Deep Reinforcement Learning\", November 2015, [arxiv](https://arxiv.org/abs/1511.06581)."
    ]
   },
   {
