More troubleshooting tips

--- a/reference/Troubleshooting-Tips-Tricks.ipynb
+++ b/reference/Troubleshooting-Tips-Tricks.ipynb
@@ -119,6 +119,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### \"ImportError: No module named gym\"\n",
+    "\n",
+    "If you are working on a laptop and using Anaconda, and you get import errors for modules like `gym`, e.g., _ImportError: No module named gym_, this probably indicates you have the wrong `python` and `pip` commands on your path ahead of the versions for your Conda environment. To verify, use the `which` command:\n",
+    "\n",
+    "```shell\n",
+    "$ which -a python\n",
+    "/usr/bin/python\n",
+    "/Users/me/anaconda3/envs/anyscale-academy/bin/python\n",
+    "```\n",
+    "\n",
+    "In this example, the built-in `python` is ahead of the correct Conda environment `python`.\n",
+    "\n",
+    "To fix, try the following:\n",
+    "\n",
+    "First, try activiting the `anyscale-academy` environment again: \n",
+    "\n",
+    "```shell\n",
+    "conda activate anyscale-academy\n",
+    "```\n",
+    "\n",
+    "(see the [README](../README.md) for more details about the Conda environment we are using).\n",
+    "\n",
+    "Run `which -a python` again. Does it show your `~/anaconda3/envs/anyscale-academy/bin/python` first? If not, force the correct ordering by changing the path: \n",
+    "\n",
+    "```shell\n",
+    "export PATH=$HOME/anaconda3/envs/anyscale-academy/bin:$PATH\n",
+    "```\n",
+    "\n",
+    "Run the `which` command again to confirm the correct `python` is now first in the list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Saving Resources by Ending Sessions You No Longer Need\n",
     "\n",
     "When doing lessons on a machine or cloud instance with low resources, close notebooks you no longer need and stop their kernels. Do the latter by clicking the left-hand icon with a white square inside a black circle. The tool tip says _Running Terminals and Kernels_. Click _SHUT DOWN_ for any notebooks you no longer need."
