Doc improvement, bug fix for running the simple_policy_server.py script

--- a/ray-rllib/06-Online-Learning-with-DQN.ipynb
+++ b/ray-rllib/06-Online-Learning-with-DQN.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "In DQN, instead of training a policy network to directly emit output actions from the observation, we learn a *Q* function that models the expected outcome of taking certain actions. This model is then used to compute the optimal actions at each step.\n",
     "\n",
-    "Unlike policy gradient algorithms such as PPO, DQN can learn from past experiences through *experience replay*. This allows DQN to use experiences multiple times over the course of training, improving its sample efficiency. In this lesson we are going to use a single-process configuration for DQN, but RLlib does provide a [distributed variant of DQN](https://ray.readthedocs.io/en/latest/rllib-algorithms.html#distributed-prioritized-experience-replay-ape-x). \n",
+    "Unlike policy gradient algorithms such as PPO, DQN can learn from past experiences through *experience replay*. This allows DQN to use experiences multiple times over the course of training, improving its sample efficiency. In this lesson we are going to use a single-process configuration for DQN, but RLlib also provides a distributed variant of DQN, called [Ape-X](https://ray.readthedocs.io/en/latest/rllib-algorithms.html#distributed-prioritized-experience-replay-ape-x). \n",
     "\n",
     "![dqn](../images/rllib/dqn.png)"
    ]
@@ -27,13 +27,17 @@
    "source": [
     "## Running a Simple Policy Server\n",
     "\n",
-    "Open a new terminal in Jupyter Lab using the \"+\" button under the _File_ and _Edit_ menus. Change to the `ray-rllib` directory first. Then run the following command:\n",
+    "Open a new terminal in Jupyter Lab using the \"+\" button under the _File_ and _Edit_ menus. Change to the `ray-rllib` directory first. Then run the following command (it's all on one line):\n",
     "\n",
     "```shell\n",
-    "python serving/simple_policy_server.py --action-size=2 --observation-size=4 --run=DQN --checkpoint-file=cartpole\n",
+    "python serving/simple_policy_server.py --address=auto --action-size=2 --observation-size=4 --run=DQN --checkpoint-file=cartpole\n",
     "```\n",
     "\n",
-    "> **Note:** If you are working on a laptop and using Anaconda, you may need to activate your `anyscale-academy` environment first in the terminal, as described in the [README](../README.md)"
+    "> **Troubleshooting on a Laptop:** \n",
+    "> If you are working on a laptop and using Anaconda, and you get errors like _ImportError: No module named gym_, this indicates you have the wrong `python` and `gem` commands on your path ahead of the versions for your Conda environment. To fix, try the following:\n",
+    ">\n",
+    "> 1. Activite the `anyscale-academy` environment in the terminal: `conda activate anyscale-academy` (see the [README](../README.md) for more details).\n",
+    "> 2. Run `which -a python`. Does it show `$HOME/anaconda3/envs/anyscale-academy/bin/python` first? If not, force the correct ordering by changing the path: `export PATH=$HOME/anaconda3/envs/anyscale-academy/bin:$PATH`. Run the `which` command again to confirm the correct `python` is now first in the list."
    ]
   },
   {
