--- a/ray-rllib/02-Introduction-to-RLlib.ipynb
+++ b/ray-rllib/02-Introduction-to-RLlib.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "RLlib is structured conceptually like this:\n",
     "\n",
-    "![RLlib Stack](../images/rllib/RLlib-stack.svg)"
+    "![RLlib Stack](../images/rllib/RLlib-Stack-smaller.png)"
    ]
   },
   {
@@ -5669,7 +5669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
