Reorgnized the RLlib lessons

--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -489,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll return to _CartPole_ in lesson [03: Application Cart Pole](03-Application-Cart-Pole.ipynb)."
+    "We'll return to _CartPole_ in lesson [01: Application Cart Pole](explore-rllib/01-Application-Cart-Pole.ipynb) in the `explore-rllib` section."
    ]
   },
   {
