--- a/ray-rllib/02-Introduction-to-RLlib.ipynb
+++ b/ray-rllib/02-Introduction-to-RLlib.ipynb
@@ -5644,7 +5644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next lesson, [03: Application: Cart Pole](03-Application-Cart-Pole.ipynb) returns to the _cart pole_ example, where we train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym."
+    "See the [Overview](00-Ray-RLlib-Overview.ipynb) for recommendations on which lessons to study next."
    ]
   }
  ],
