--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -161,38 +161,32 @@
     "\n",
     "_Ray RLlib_ is Ray's system for _reinforcement learning_. This tutorial begins with a \"crash course\" in RL concepts. It then explores several of the commonly-used algorithms and approaches for different applications.\n",
     "\n",
-    "Because of the breadth of RL this tutorial is divided into several segments.\n",
+    "Because of the breadth of RL this tutorial is divided into several sections.\n",
     "\n",
     "> **Tip:** See [Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.ipynb) for a suggested _learning plan_.\n",
+    "## Tutorial Sections\n",
     "\n",
-    "### Core Reinforcement Learning\n",
+    "Because of the breadth of RL this tutorial is divided into several sections. See below for a recommended _learning plan_.\n",
+    "\n",
+    "### Introduction to Reinforcement Learning and RLlib\n",
     "\n",
     "|    | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
-    "| 00 | [Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial. |\n",
+    "| 00 | [Ray RLlib Overview](ray-rllib/00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial, including all the sections. |\n",
     "| 01 | [Introduction to Reinforcement Learning](ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02 | [Introduction to RLlib](ray-rllib/02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
-    "| 03 | [Application - Cart Pole](ray-rllib/03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
-    "| 04 | [Application: Bipedal Walker](ray-rllib/04-Bipedal-Walker.ipynb) | Train a two-legged robot simulator. This is an optional lesson, due to the longer compute times required, but fun to try. |\n",
-    "| 05 | [Custom Environments and Reward Shaping](ray-rllib/05-Custom-Environments-Reward-Shaping.ipynb) | How to customize environments and rewards for your applications. |\n",
-    "| 06 | [Online Learning with DQN](ray-rllib/06-Online-Learning-with-DQN.ipynb) | How to set up a server that simultaneously serves and learns a policy. |\n",
-    "| 07 | [RL References](ray-rllib/07-RL-References.ipynb) | References on reinforcement learning. |\n",
+    "| 03 | [RL References](ray-rllib/03-RL-References.ipynb) | References on reinforcement learning. |\n",
     "\n",
-    "Some additional examples you might explore can be found in the `extras` folder:\n",
-    "\n",
-    "| Lesson | Description |\n",
-    "| :----- | :---------- |\n",
-    "| [Extra: Application - Mountain Car](ray-rllib/extras/Extra-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
-    "| [Extra: Application - Taxi](ray-rllib/extras/Extra-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
-    "| [Extra: Application - Frozen Lake](ray-rllib/extras/Extra-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
-    "\n",
-    "In addition, exercise solutions for this tutorial can be found [here](ray-rllib/solutions/Ray-RLlib-Solutions.ipynb).\n",
-    "\n",
-    "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project.\n",
-    "\n",
+    "Exercise solutions for this introduction can be found [here](ray-rllib/solutions/Ray-RLlib-Solutions.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Multi-Armed Bandits\n",
     "\n",
-    "_Multi-Armed Bandits_ (MABs) are a special kind of RL problem that have broad and growing applications. The term is inspired by the slot machines in casinos, so called _one-armed bandits_, but where a machine might have more than one arm. \n",
+    "_Multi-Armed Bandits_ (MABs) are a special kind of RL problem that have broad and growing applications. They are also an excellent platform for investigating the important _exploitation vs. exploration tradeoff_ at the heart of RL. The term _multi-armed bandit_ is inspired by the slot machines in casinos, so called _one-armed bandits_, but where a machine might have more than one arm. \n",
     "\n",
     "|    | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
@@ -204,7 +198,36 @@
     "| 05 | [Linear Thompson Sampling](ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb) | Another popular algorithm for exploration vs. exploitation is _Thompson Sampling_. This lesson shows how to use a linear version in RLlib. |\n",
     "| 06 | [Market Example](ray-rllib/multi-armed-bandits/06-Market-Example.ipynb) | A simplified real-world example of MABs, finding the optimal stock and bond investment strategy. |\n",
     "\n",
-    "In addition, exercise solutions for this segment of the tutorial can be found [here](ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb)."
+    "Exercise solutions for this segment of the tutorial can be found [here](ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explore Reinforcement Learning and RLlib\n",
+    "\n",
+    "This section dives into more details about RL and using RLlib. It is best studied after going through the MAB material.\n",
+    "\n",
+    "|    | Lesson | Description |\n",
+    "| :- | :----- | :---------- |\n",
+    "| 00 | [Explore RLlib Overview](ray-rllib/explore-rllib/00-Explore-RLlib-Overview.ipynb) | Overview of this set of lessons. |\n",
+    "| 01 | [Application - Cart Pole](ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
+    "| 02 | [Application: Bipedal Walker](ray-rllib/explore-rllib/02-Bipedal-Walker.ipynb) | Train a two-legged robot simulator. This is an optional lesson, due to the longer compute times required, but fun to try. |\n",
+    "| 03 | [Custom Environments and Reward Shaping](ray-rllib/explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb) | How to customize environments and rewards for your applications. |\n",
+    "| 04 | [Online Learning with DQN](ray-rllib/explore-rllib/04-Online-Learning-with-DQN.ipynb) | How to set up a server that simultaneously serves and learns a policy. |\n",
+    "\n",
+    "Some additional examples you might explore can be found in the `extras` folder:\n",
+    "\n",
+    "| Lesson | Description |\n",
+    "| :----- | :---------- |\n",
+    "| [Extra: Application - Mountain Car](ray-rllib/explore-rllib/extras/Extra-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
+    "| [Extra: Application - Taxi](ray-rllib/explore-rllib/extras/Extra-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
+    "| [Extra: Application - Frozen Lake](ray-rllib/explore-rllib/extras/Extra-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
+    "\n",
+    "In addition, exercise solutions for this tutorial can be found [here](ray-rllib/explore-rllib/solutions/Ray-RLlib-Solutions.ipynb).\n",
+    "\n",
+    "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project."
    ]
   },
   {
