--- a/ray-rllib/00-Ray-RLlib-Overview.ipynb
+++ b/ray-rllib/00-Ray-RLlib-Overview.ipynb
@@ -25,33 +25,24 @@
    "source": [
     "## Tutorial Sections\n",
     "\n",
-    "Because of the breadth of RL this tutorial is divided into several segments. See below for a recommended _learning plan_.\n",
+    "Because of the breadth of RL this tutorial is divided into several sections. See below for a recommended _learning plan_.\n",
     "\n",
-    "### Core Reinforcement Learning\n",
+    "### Introduction to Reinforcement Learning and RLlib\n",
     "\n",
     "|    | Lesson | Description |\n",
     "| :- | :----- | :---------- |\n",
-    "| 00 | [Ray RLlib Overview](00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial. |\n",
+    "| 00 | [Ray RLlib Overview](00-Ray-RLlib-Overview.ipynb) | Overview of this tutorial, including all the sections. |\n",
     "| 01 | [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) | A quick introduction to the concepts of reinforcement learning. You can skim or skip this lesson if you already understand RL concepts. |\n",
     "| 02 | [Introduction to RLlib](02-Introduction-to-RLlib.ipynb) | An overview of RLlib, its goals and the capabilities it provides. |\n",
-    "| 03 | [Application - Cart Pole](03-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
-    "| 04 | [Application: Bipedal Walker](04-Bipedal-Walker.ipynb) | Train a two-legged robot simulator. This is an optional lesson, due to the longer compute times required, but fun to try. |\n",
-    "| 05 | [Custom Environments and Reward Shaping](05-Custom-Environments-Reward-Shaping.ipynb) | How to customize environments and rewards for your applications. |\n",
-    "| 06 | [Online Learning with DQN](06-Online-Learning-with-DQN.ipynb) | How to set up a server that simultaneously serves and learns a policy. |\n",
-    "| 07 | [RL References](07-RL-References.ipynb) | References on reinforcement learning. |\n",
+    "| 03 | [RL References](03-RL-References.ipynb) | References on reinforcement learning. |\n",
     "\n",
-    "Some additional examples you might explore can be found in the `extras` folder:\n",
-    "\n",
-    "| Lesson | Description |\n",
-    "| :----- | :---------- |\n",
-    "| [Extra: Application - Mountain Car](extras/Extra-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
-    "| [Extra: Application - Taxi](extras/Extra-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
-    "| [Extra: Application - Frozen Lake](extras/Extra-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
-    "\n",
-    "In addition, exercise solutions for this tutorial can be found [here](solutions/Ray-RLlib-Solutions.ipynb).\n",
-    "\n",
-    "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project.\n",
-    "\n",
+    "Exercise solutions for this introduction can be found [here](solutions/Ray-RLlib-Solutions.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Multi-Armed Bandits\n",
     "\n",
     "_Multi-Armed Bandits_ (MABs) are a special kind of RL problem that have broad and growing applications. They are also an excellent platform for investigating the important _exploitation vs. exploration tradeoff_ at the heart of RL. The term _multi-armed bandit_ is inspired by the slot machines in casinos, so called _one-armed bandits_, but where a machine might have more than one arm. \n",
@@ -66,7 +57,36 @@
     "| 05 | [Linear Thompson Sampling](multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb) | Another popular algorithm for exploration vs. exploitation is _Thompson Sampling_. This lesson shows how to use a linear version in RLlib. |\n",
     "| 06 | [Market Example](multi-armed-bandits/06-Market-Example.ipynb) | A simplified real-world example of MABs, finding the optimal stock and bond investment strategy. |\n",
     "\n",
-    "In addition, exercise solutions for this segment of the tutorial can be found [here](multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb)."
+    "Exercise solutions for this segment of the tutorial can be found [here](multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explore Reinforcement Learning and RLlib\n",
+    "\n",
+    "This section dives into more details about RL and using RLlib. It is best studied after going through the MAB material.\n",
+    "\n",
+    "|    | Lesson | Description |\n",
+    "| :- | :----- | :---------- |\n",
+    "| 00 | [Explore RLlib Overview](explore-rllib/00-Explore-RLlib-Overview.ipynb) | Overview of this set of lessons. |\n",
+    "| 01 | [Application - Cart Pole](explore-rllib/01-Application-Cart-Pole.ipynb) | The best starting place for learning how to use RL, in this case to train a moving car to balance a vertical pole. Based on the `CartPole-v0` environment from OpenAI Gym, combined with RLlib. |\n",
+    "| 02 | [Application: Bipedal Walker](explore-rllib/02-Bipedal-Walker.ipynb) | Train a two-legged robot simulator. This is an optional lesson, due to the longer compute times required, but fun to try. |\n",
+    "| 03 | [Custom Environments and Reward Shaping](explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb) | How to customize environments and rewards for your applications. |\n",
+    "| 04 | [Online Learning with DQN](explore-rllib/04-Online-Learning-with-DQN.ipynb) | How to set up a server that simultaneously serves and learns a policy. |\n",
+    "\n",
+    "Some additional examples you might explore can be found in the `extras` folder:\n",
+    "\n",
+    "| Lesson | Description |\n",
+    "| :----- | :---------- |\n",
+    "| [Extra: Application - Mountain Car](explore-rllib/extras/Extra-Application-Mountain-Car.ipynb) | Based on the `MountainCar-v0` environment from OpenAI Gym. |\n",
+    "| [Extra: Application - Taxi](explore-rllib/extras/Extra-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
+    "| [Extra: Application - Frozen Lake](explore-rllib/extras/Extra-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
+    "\n",
+    "In addition, exercise solutions for this tutorial can be found [here](explore-rllib/solutions/Ray-RLlib-Solutions.ipynb).\n",
+    "\n",
+    "For earlier versions of some of these tutorials, see [`rllib_exercises`](https://github.com/ray-project/tutorial/blob/master/rllib_exercises/rllib_colab.ipynb) in the original [github.com/ray-project/tutorial](https://github.com/ray-project/tutorial) project."
    ]
   },
   {
@@ -77,7 +97,7 @@
     "\n",
     "We recommend the following _learning plan_ for working through the lessons:\n",
     "\n",
-    "Start with the overview material for RL and RLlib:\n",
+    "Start with the introduction material for RL and RLlib:\n",
     "\n",
     "* [Ray RLlib Overview](00-Ray-RLlib-Overview.ipynb)\n",
     "* [Introduction to Reinforcement Learning](01-Introduction-to-Reinforcement-Learning.ipynb) \n",
@@ -99,26 +119,28 @@
     "\n",
     "* [Market Example](multi-armed-bandits/06-Market-Example.ipynb)\n",
     "\n",
-    "Next, return to the \"core\" RL lessons:\n",
+    "Next, return to the \"exploration\" lessons under `explore-rllib`:\n",
     "\n",
     "Study the popular _CartPole_ example:\n",
     "\n",
-    "* [Application: Cart Pole](03-Application-Cart-Pole.ipynb)\n",
+    "* [Application: Cart Pole](explore-rllib/03-Application-Cart-Pole.ipynb)\n",
     "\n",
     "If you working through the lessons at your own pace (i.e., not in a class), work through the _Bipedal Walker_ example:\n",
     "\n",
-    "* [Application: Bipedal Walker](04-Bipedal-Walker.ipynb)\n",
+    "* [Application: Bipedal Walker](explore-rllib/04-Bipedal-Walker.ipynb)\n",
     "\n",
     "Then finish the rest of the `ray-rllib` lessons:\n",
     "\n",
-    "* [Custom Environments and Reward Shaping](05-Custom-Environments-Reward-Shaping.ipynb)\n",
-    "* [Online Learning with DQN](06-Online-Learning-with-DQN.ipynb)\n",
+    "* [Custom Environments and Reward Shaping](explore-rllib/05-Custom-Environments-Reward-Shaping.ipynb)\n",
+    "* [Online Learning with DQN](explore-rllib/06-Online-Learning-with-DQN.ipynb)\n",
     "\n",
     "Other examples are provided for your use. See the `extras` directory for examples that work with other OpenAI Gym environments:\n",
     "\n",
-    "* [Extra: Application - Mountain Car](extras/Extra-Application-Mountain-Car.ipynb)\n",
-    "* [Extra: Application - Taxi](extras/Extra-Application-Taxi.ipynb)\n",
-    "* [Extra: Application - Frozen Lake](extras/Extra-Application-Frozen-Lake.ipynb)"
+    "* [Extra: Application - Mountain Car](explore-rllib/extras/Extra-Application-Mountain-Car.ipynb)\n",
+    "* [Extra: Application - Taxi](explore-rllib/extras/Extra-Application-Taxi.ipynb)\n",
+    "* [Extra: Application - Frozen Lake](explore-rllib/extras/Extra-Application-Frozen-Lake.ipynb)\n",
+    "\n",
+    "Finally, the [references](03-RL-References.ipynb) collect useful books, papers, blog posts, and other available tutorial materials."
    ]
   },
   {
