--- a/ray-rllib/02-Introduction-to-RLlib.ipynb
+++ b/ray-rllib/02-Introduction-to-RLlib.ipynb
@@ -88,7 +88,7 @@
     "rllib rollout --help  # specific help on the rollout options\n",
     "```\n",
     "\n",
-    "_Rollout_ means running a episode with the trained model, which you specify by passing a checkpoint directory to the command.\n",
+    "_Rollout_ means running an episode with the trained model, which you specify by passing a checkpoint directory to the command.\n",
     "\n",
     "You can execute the same training logic (but will different output) using the following Python code, which leverages [Ray Tune](http://tune.io), specifically the [tune.run](https://docs.ray.io/en/latest/tune/api_docs/execution.html#tune-run) method:\n",
     "\n",
