--- a/ray-rllib/02-Introduction-to-RLlib.ipynb
+++ b/ray-rllib/02-Introduction-to-RLlib.ipynb
@@ -149,14 +149,30 @@
    "source": [
     "#### Rollout\n",
     "\n",
-    "> **WARNING:** The `rllib rollout` command shown next won't work in a cloud environment, because it attempts to pop up a window. If you are taking a live class, the instructor will demonstrate what you would see. You can also watch the next video of a single _episode_."
+    "> **WARNING:** The `rllib rollout` command shown below won't work in a cloud environment, because it attempts to pop up a window. If you are taking a live class, the instructor will demonstrate what you would see. You can also watch the next video of a single _episode_."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<video src=\"../images/rllib/Cart-Pole-Example-Video.mp4\" controls  >\n",
+       "      Your browser does not support the <code>video</code> element.\n",
+       "    </video>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Video object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import Video\n",
     "\n",
@@ -179,9 +195,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/deanwampler/ray_results/default\n",
+      "/Users/deanwampler/ray_results/default/experiment_state-2020-06-18_13-23-04.json\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/result.json\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/params.pkl\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/params.json\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/events.out.tfevents.1592511784.DWAnyscaleMBP.local\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/progress.csv\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_20\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_20/checkpoint-20\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_20/checkpoint-20.tune_metadata\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_20/.is_checkpoint\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_10\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_10/checkpoint-10\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_10/.is_checkpoint\n",
+      "/Users/deanwampler/ray_results/default/PPO_CartPole-v0_0_2020-06-18_13-23-04objm8pgg/checkpoint_10/checkpoint-10.tune_metadata\n"
+     ]
+    }
+   ],
    "source": [
     "!find ~/ray_results/default"
    ]
